[package]
name = "lupo"
version = "0.1.0"
authors = ["Luca Bolognese <lucabol@microsoft.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-chain = "0.12.4" 
log = "0.4.14"
stderrlog = "0.5.1"
dirs = "3.0.1"
clap = "3.0.0-beta.2"
csv = "1.1.6"
serde = { version = "1.0.124", features = ["derive"] }