[package]
name = "lupo"
version = "0.1.0"
authors = ["Luca Bolognese <lucabol@microsoft.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-chain = "0.12.4" 
log = "0.4.14"
stderrlog = "0.5.1"
dirs = "3.0.1"
clap = "3.0.0-beta.2"
csv = "1.1.6"
serde = { version = "1.0.124", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
unicode-truncate = "0.2.0"
num-format = "0.4"
futures = "0.3"
tokio = { version = "0.2", default-features = false, features = [ "stream", "rt-threaded", "macros" ]}
yahoo-finance = "0.3.0"

[dev-dependencies]
tempfile = "3.2.0"
pretty_assertions = "0.7.1"

[target.'cfg(target_family = "unix")'.dependencies]
nix = "0.17.0"
